--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Open tabs</h1>
-    <button id="sendmessageid">Virus total</button>
+    <button id="openVirusTotal">Virus total</button>
     
     <script src="popup.js"></script>
 </body>
